--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,9 +1,24 @@
+#spring:
+#  datasource:
+#    driver-class-name: com.mysql.cj.jdbc.Driver
+#    url: jdbc:mysql://localhost:3306/registration?useSSL=false&serverTimezone=UTC
+#    username: root
+#    password: 1000854839
+#    hikari:
+#      initialization-fail-timeout: 0
+#  jpa:
+#    database-platform: org.hibernate.dialect.MySQL5Dialect
+#    generate-ddl: true
+#    show-sql: true
+#    hibernate:
+#      ddl-auto: update
+
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/registration?useSSL=false&serverTimezone=UTC
-    username: root
-    password: 1000854839
+    url: jdbc:mysql://sql9.freesqldatabase.com:3306/sql9642725?useSSL=false&serverTimezone=UTC
+    username: sql9642725
+    password: ULKis12VKM
     hikari:
       initialization-fail-timeout: 0
   jpa:
